updated html and css

--- a/index.html
+++ b/index.html
@@ -8,36 +8,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Lab 1 Part 1</title>
+    <title>Lab 1 Part 2</title>
   </head>
   <body>
     <header>
-        <h1>chirpus inc.</h1>
-        <nav class="header-nav">
+      <h1>chirpus inc.</h1>
+      <nav class="header-nav">
         <ul>
-          <li><a href="#"></a>Work</li>
-          <li><a href="#"></a>About Us</li>
-          <li><a href="#"></a>Contact</li>
-          <li class="hire-us"><a href="#"></a>Hire Us</li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
+          <li class="hire-us"><a href="#">Hire Us</a></li>
         </ul>
       </nav>
-      </header>
-      <main>
+    </header>
+    <main>
+      <div class="text">
         <h2 class="description-heading">chirpus inc.</h2>
         <p class="description">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-          cumque facilis reiciendis optio laudantium officiis vitae
-          exercitationem quasi totam. Obcaecati, doloribus! Ipsa neque error
-          dignissimos rem! Nisi reprehenderit eius sequi.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+          tempore consequatur, cum doloribus unde ea ducimus harum dolorem,
+          totam sapiente dicta! Est laudantium illum excepturi vero nostrum!
+          Beatae, odit modi.
         </p>
-        <button class="cta">Call To Action</button> 
-      </main>
+      </div>
+      <button class="cta">Call To Action</button>
+      <div class="circles-container">
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
+        <div class="circle-3"></div>
+      </div>
     </main>
     <footer>
-      <h3 class="chirpus-footer">chirpus inc.</h3>
+      <p class="chirpus-footer">chirpus inc.</p>
       <nav class="footer-nav">
         <ul>
           <li><a href="#">Link 1</a></li>
